startup ui fix: admin wrap

--- a/src/Startuppages/eAcademy/sessionLectures.module.scss
+++ b/src/Startuppages/eAcademy/sessionLectures.module.scss
@@ -10,8 +10,9 @@
     margin-bottom: 39px;
     display: flex;
     align-items: center;
-    width: max-content;
+    max-width: max-content;
     cursor: pointer;
+
     p {
       font-family: "DM Sans";
       font-style: normal;
